--- a/styles/login.css
+++ b/styles/login.css
@@ -26,6 +26,7 @@ body {
 }
 
 .rg-heading {
+    font-size: 32px;
     font-size: 2rem;
 }
 
@@ -37,6 +38,7 @@ body {
     width: 100%;
     background: none;
     border: 0;
+    border-bottom: 2px solid #fff;
     border-bottom: 2px solid rgba(255, 255, 255, .7);
     margin: 10% 0;
     padding: 4%;
