--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -40,10 +40,12 @@
 .heading {
     font-weight: bold;
     margin-bottom: 3%;
+    font-size: 30px;
     font-size: 1.8rem;
 }
 
 .contacts>.heading {
+    font-size: 37px;
     font-size: 2.5rem;
 }
 
