--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "CaviarDreamsRegular";
+    src: url("../fonts/CaviarDreamsRegular/CaviarDreamsRegular.eot");
+    src: url("../fonts/CaviarDreamsRegular/CaviarDreamsRegular.eot?#iefix")format("embedded-opentype"), url("../fonts/CaviarDreamsRegular/CaviarDreamsRegular.woff") format("woff"), url("../fonts/CaviarDreamsRegular/CaviarDreamsRegular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,11 +15,11 @@
 button,
 input,
 a {
-    font-family: 'Poiret One', cursive;
+    font-family: 'CaviarDreamsRegular', cursive;
 }
 
 body {
-    font-family: 'Poiret One', cursive;
+    font-family: 'CaviarDreamsRegular', cursive;
     font-size: 20px;
 }
 
@@ -96,7 +104,6 @@ a:visited {
     color: #666;
     border-bottom: 1px solid #D2D7D3;
     cursor: pointer;
-    font-weight: bold;
     padding: 4%;
 }
 
@@ -228,16 +235,10 @@ a:visited {
     color: #000;
 }
 
-
-/*.site-search:hover .search-icon,*/
-
 .active-icon {
     border: 1px solid #ccc;
     border-left: 0;
 }
-
-
-/*.site-search:hover .search,*/
 
 .site-search .active-search {
     width: 100%;
@@ -247,7 +248,6 @@ a:visited {
 
 .rg-input::-webkit-input-placeholder,
 .search::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
     color: #fff;
 }
 
@@ -257,7 +257,6 @@ a:visited {
 
 .rg-input::-moz-placeholder,
 .search::-moz-placeholder {
-    /* Firefox 19+ */
     color: #fff;
 }
 
@@ -267,7 +266,6 @@ a:visited {
 
 .rg-input:-ms-input-placeholder,
 .search:-ms-input-placeholder {
-    /* IE 10+ */
     color: #fff;
 }
 
@@ -277,7 +275,6 @@ a:visited {
 
 .rg-input:-moz-placeholder,
 .search:-moz-placeholder {
-    /* Firefox 18- */
     color: #fff;
 }
 
@@ -299,6 +296,22 @@ a:visited {
 
 .site-search [class*="flaticon-"]:hover:before {
     opacity: .7;
+}
+
+.placeholder-label {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 4%;
+    cursor: text;
+}
+
+.relative {
+    position: relative;
+}
+
+.invisible {
+    display: none;
 }
 
 
@@ -359,4 +372,86 @@ hr.zigzag {
 
 .message-buttons [class*="flaticon-"]:hover:before {
     color: #3498DB;
+}
+
+.tags {
+    margin-bottom: 1em;
+}
+
+.tags:after {
+    content: ' ';
+    display: block;
+    clear: both;
+}
+
+.tag-container {
+    float: left;
+    border-radius: 20px;
+    padding: .1% 2%;
+    border: 1px solid #faebd7;
+    margin: 2%;
+}
+
+.cross {
+    width: 13px;
+    height: 10px;
+    position: relative;
+    top: 2px;
+    right: -4px;
+    display: inline-block;
+}
+
+.cross:after,
+.cross:before {
+    display: block;
+    position: absolute;
+    content: " ";
+    background: #fff;
+    height: 2px;
+    width: 10px;
+    cursor: pointer;
+}
+
+.cross:before {
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.cross:after {
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.upld-wrapper {
+    background: #666;
+    opacity: .9;
+}
+
+.file-input {
+    width: .1px;
+    height: .1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.file-input+label {
+    font-weight: bold;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 2%;
+    display: inline-block;
+    cursor: pointer;
+    margin-top: 10%;
+}
+
+.upld-form .flaticon-cloud-computing:before {
+    margin: 0 10px 0;
+}
+
+.file-input+label:hover,
+.upld-form [class*="flaticon-"]:hover:before {
+    color: #fff;
+    opacity: .7;
 }
