--- a/styles/user.css
+++ b/styles/user.css
@@ -77,7 +77,7 @@
         .sort-wrapper.visible {
             display: block;
         }
-
+        
         .sort-wrapper:after {
             content: ' ';
             display: block;
@@ -90,7 +90,7 @@
         
         .sort-description {
             width: 60%;
-            display: inline-block;
+            float: left;
             text-align: left;
         }
         
@@ -120,10 +120,37 @@
         }
         
         .sort-type.active-choice:after {
-            content: ' ';
+            content: '';
             display: block;
             height: 0;
             border: 1px dashed #000;
+        }
+        
+        .filter-buttons {
+            float: left;
+            width: 40%;
+            font-size: 18px;
+            font-size: 1.1rem;
+        }
+        
+        .filter-buttons .cross {
+            right: -5px;
+        }
+        
+        .filter-buttons .cross:after,
+        .filter-buttons .cross:before {
+            background: #000;
+        }
+        
+        .filter-buttons .tag-container {
+            float: right;
+            margin: 0;
+        }
+        
+        .filter-buttons:after {
+            content: '';
+            display: block;
+            clear: both;
         }
         
         .triangles {
@@ -219,13 +246,11 @@
             box-sizing: border-box;
             text-decoration: none;
             color: inherit;
+            font-size: 21px;
             font-size: 1.3rem;
             padding: 10px 30px;
             display: inline-block;
             width: 100%;
-        }
-        
-        .page-item a {
             border-top: 2px solid #B8B89F;
             position: relative;
         }
@@ -247,10 +272,10 @@
             width: 300px;
             overflow: hidden;
             display: block;
-            margin: 0 auto;
+            margin: 0 auto 20px auto;
             font-size: 0;
         }
-
+        
         .found-image {
             -webkit-column-break-inside: avoid;
             page-break-inside: avoid;
@@ -362,6 +387,7 @@
         
         .general-photo-info {
             padding: 5px;
+            font-size: 17px;
             font-size: 1rem;
             width: 200px;
             float: left;
@@ -369,6 +395,7 @@
         }
         
         .found-title {
+            font-size: 18px;
             font-size: 1.1rem;
         }
         
@@ -452,32 +479,32 @@
         
         .like-photo {
             background: none;
-            padding: 1% 5%;
+            padding: 0 2% 3px 2%;
             color: #fff;
             font-size: 22px;
             border-radius: 5px;
             border: 1px solid #ccc;
+            cursor: pointer;
         }
         
         .like-photo:focus {
             outline: none;
         }
-        /*
-        .photo-likes:hover,
+        
+        .photo-likes>*:hover,
         .like-photo:hover {
             opacity: .7;
-        }*/
+        }
         
-        .photo-likes:active
-        /*.like-photo:active*/
-        
-        {
+        .photo-likes>*:active,
+        .like-photo:active {
             opacity: .5;
         }
         
         .like-photo span {
             vertical-align: middle;
-            padding-left: 30px;
+            padding-left: 5px;
+            font-size: .9em;
         }
         
         .like-photo:before {
@@ -508,18 +535,18 @@
             clear: both;
         }
         
-        .tag-container {
+        .tag {
             float: left;
             margin-right: 5px;
             font-size: 1.1rem;
         }
         
-        .tag-container span {
+        .tag span {
             vertical-align: middle;
             cursor: pointer;
         }
         
-        .tag-container span:hover {
+        .tag span:hover {
             text-decoration: underline;
         }
         
@@ -529,6 +556,7 @@
             font-weight: bold;
             margin-top: 2em;
         }
+        
         .not-found-message a {
             text-decoration: underline;
         }
